fix: added gap style rule and remove space-between

--- a/packages/ontario-design-system-component-library/src/components/ontario-card-collection/ontario-card-collection.scss
+++ b/packages/ontario-design-system-component-library/src/components/ontario-card-collection/ontario-card-collection.scss
@@ -5,7 +5,7 @@
 .ontario-card-collection__container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	gap: spacing.$spacing-6;
 	margin: spacing.$spacing-0;
 	padding: spacing.$spacing-0;
 }
